Updated index.html with personalized content

--- a/index.html
+++ b/index.html
@@ -4,17 +4,35 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<!-- Added Image -->
+<img src="forkit.gif" id="octocat" alt="GitHub Octocat" />
 
-<!-- Feel free to change this text here -->
+<!-- Personalized Contribution -->
 <p>
-  Fork me? Fork you, @octocat!
+  Hello! This is a contribution by [nanamikimi]. I forked this repository as part of my GitHub practice project.
 </p>
+
+<!-- Additional Personalization -->
+<h2 style="color: green;">
+  Thank you for letting me collaborate!
+</h2>
+
+<!-- Another Example Contribution -->
+<p>
+  I am learning how to fork repositories, make changes, and submit pull requests on GitHub. This has been a valuable experience.
+</p>
+
+<!-- A footer message -->
+<footer>
+  <p style="font-size: 12px; color: gray;">
+    Contributed by [Salma]. Date: [Insert Today's Date].
+  </p>
+</footer>
 
 </body>
 </html>
