--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+// This is a comment to add to test github
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
