--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+
+<h1> Assignment No 2 (Git & GitHub) </h1>
+<h2> Completed the steps of the assignment </h2>
 <p>
   Fork me? Fork you, @octocat!
 </p>
