--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<div id="octocat">
+  <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
+</div>
 
-<!-- Feel free to change this text here -->
+<p>
+  Ready to team up? Let's collaborate, @octocat!
+</p>
 <p>
   Fork me? Fork you, @octocat!
 </p>
