--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Thanks for the fork, king<crown>👑</crown>! Get it??? Forking... 
 </p>
 
 </body>
