--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
-  <br/>
+  <br>
+  <hr>
   Testing Fork.
+  <br>
+  <hr>
+  Branch Fork
 </p>
 
 </body>
