Revert "Update index.html #1"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!sadsad
+  Fork me? Fork you, @octocat!
   asdwerasd1asdwerasd1asdwerasd1asdwerasd1asdwerasd1
 </p>
 
