--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
+<h1>My name is Neeraj jha </h1>
+<h1>Making my first contribution </h1>
 
-<!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
 </p>
