--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+
 <p>
-  Fork me? Fork you, @octocat!
+  git clone https://github.com/YOUR-USERNAME/Spoon-Knife
+</p>
+<p>
+  git branch BRANCH-NAME
+  git checkout BRANCH-NAME
 </p>
 
 </body>
