--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Crazy? I was crazy once. They locked me in a room. A rubber room.
+  A rubber room with rat. Rats make me crazy. Crazy? I was crazy once...
 </p>
 
 </body>
