--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
   Crazy? I was crazy once. They locked me in a room. A rubber room.
   A rubber room with rat. Rats make me crazy. Crazy? I was crazy once...
 </p>
+  <input action="">
+    <input type="username" placeholder="username">Username</body>
+    <input type="password" placeholder="password">Password</input>
+    <button>Submit</button>
+  </form>
 
 </body>
 </html>
