About us is added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <p>
   Fork me? Fork you, @octocat!
 </p>
-
+<section>
+  <h2>About Us</h2>
+  <p>This is a collaborative project demonstrating Github Workflow</p>
+</section>
 </body>
 </html>
