--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+ <h1>this is a heading </h1>
 <p>
   Fork me? Fork you, @octocat!
+  i committed these changes in my fork 
+  
 </p>
 
 </body>
