Updating nothing, silly

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- today is jan 8, 2025 -->
+<!-- today is jan 8, 2025 --> Further changes
 <p>
   Fork me? Fork you, @octocat!
 </p>
