--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
+  <title>Spoon</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -11,9 +11,17 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
+<h1>Teste</h1>
+
 <!-- Feel free to change this text here -->
+<!-- Teste -->
 <p>
   Fork me? Fork you, @octocat!
+  Teste
+</p>
+<p>
+  Fork me? Fork you, @octocat!
+  Teste
 </p>
 
 </body>
