--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  <h1>creating conflicts</h1>
+  <p>this is really good, hah this is fun</p>
 </p>
 
 </body>
 </html>
-this is really good
-creating conflicts, hah this is fun
+
