--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<!-- Feel free to change this text here Spoon-Knife-->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, not me, you @octocat!
 </p>
 
 </body>
