--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @octocat! Conflict created
   <h1>creating conflicts</h1>
   <p>this is really good, hah this is fun</p>
 </p>
