--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<hii>
 
 <img src="forkit.gif" id="octocat" alt="" />
 
