--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+  <div id="octocat">
+  <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
+</div>
+
+<p>
+  Ready to team up? Let's collaborate, @octocat!
+</p>
+
+<!-- <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
-</p>
+</p> -->
 
 </body>
 </html>
