added info about John in index.html

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
   Fork me? Fork you, @octocat!
 </p>
 
+<h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate facilis ea voluptatibus non laboriosam maxime architecto quia id perferendis tenetur veniam dolore culpa consequuntur dignissimos, porro quidem dolores et amet!</h1>
+
+<h2>hi, my name is John, and I'm a web developer</h2>
+
 </body>
 </html>
