--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+
+  That's one small spoon for a man - one giant Spork for mankind.
 </p>
 
 </body>
