--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
 <body>
 
-   <div id="octocat">
-     <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
-   </div>
+   <img src="forkit.gif" id="octocat" alt="" />
 
-   <p>
-     Ready to team up? Let's collaborate, @octocat!
-   </p>
+<!-- Feel free to change this text here -->
+<p>
+  Fork me? Fork you, @octocat!
+</p>
 
 </body>
 </html>
