--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <p>
-  Ready to team up? Let's collaborate, @octocat!2
+  Ready to team up? Let's collaborate, @octocat! Fer quiere 3
 </p>
 </p>
 
