--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
-
+<h1>Fork, Knife, or Spoon?</h1>
+  - [x] Fork
+  - [ ] Knife
+  - [ ] Spoon
+  
 </body>
 </html>
