a short change in index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <p>
   Fork me? Fork you, @octocat!
 </p>
-
+<h1>My name is Ajay</h1>
+<h2>My git hub profile name is AjayVadapalli</h2>
 </body>
 </html>
