add java tutorial

--- a/index.html
+++ b/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+  <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+  <div id="tutorial">
+    <h1>Java Programming Tutorial</h1>
+    <section>
+      <h2>Getting Started</h2>
+      <p>Java is a popular object-oriented programming language. Here are some basic concepts:</p>
+      <ul>
+        <li>Classes and Objects</li>
+        <li>Variables and Data Types</li>
+        <li>Control Structures</li>
+        <li>Methods and Functions</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Example Code</h2>
+      <pre>
+public class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, World!");
+    }
+}
+    </pre>
+    </section>
+  </div>
 
 </body>
+
 </html>
