--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <title>Fork and Knife</title>
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+  <!-- Image of a fork and knife -->
+  <img src="fork-and-knife.png" id="cutlery" alt="Fork and Knife" />
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+  <!-- Customizable text -->
+  <p>
+    Fork this repository and make it your own! 🍴
+  </p>
 
 </body>
 </html>
