updated index.html with minor changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  This text has been edited and minor modifcations are made
 </p>
 
 </body>
