--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+<p>This is a changed Spoon-Knife.</p>
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
