--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
+<!-- This is my first change in GitHub -->
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
@@ -18,3 +19,4 @@
 
 </body>
 </html>
+
