--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- This is my first change in GitHub -->
+
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
 </p>
+  <p> 
+    this is a test change for my pull request
+    </p>
+  
 
 </body>
 </html>
