did this to check commit in pc

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  hello nice meeting you
+  ~~241
 </p>
 
 </body>
