1st Update index.html
Changed the text in paragraph element

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  i forked this file and editing for the sake of SE lab
 </p>
 
 </body>
