--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<!-- Feel free to change this text here -->
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
