--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <title>Spoon-Knife | Fork It!</title>
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+  <div class="container">
+    <h1>Welcome to Spoon-Knife</h1>
+    <img src="forkit.gif" id="octocat" alt="Fork it, Octocat!" />
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+    <p>
+      Fork me? Fork yeah! 🐙🍴
+    </p>
+  </div>
 
 </body>
 </html>
+
