--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<!-- Original text -->
 <p>
   Fork me? Fork you, @octocat!
 </p>
+
+<!-- New text to add -->
+<p>
+  **Hello, fellow developers!**
+  This is a fun project to work on. Feel free to contribute!
+</p>
+
+<!-- Additional links or images can be added here -->
+<a href="https://github.com">
+  **Visit GitHub**
+</a>
 
 </body>
 </html>
