modified the text in index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  oh i am free to make changes to the text
 </p>
 
 </body>
