--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
+  <title>My Custom Forked Project</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -13,8 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Hello from my forked repository! My self GunaShritha learning GitHub with Spoon-Knife.
 </p>
+
 
 </body>
 </html>
