--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @octocat! 
+  <br> 
+  (and me too!) 
 </p>
 
 </body>
