Changed the text in index file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  Hi, this is Kaashith25. Just making changes as part of lab asst.
 </p>
 
 </body>
