--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -12,6 +13,7 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+<p>This is my change to the index.html file.</p>
 <p>
   Fork me? Fork you, @octocat!
 </p>
