update: adding a heading and a paragraph

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+<h1>OctoCat</h1>
+<p>I'm octocat, the mascot of GitHub. The intention here is to learn how to contribute to an open source project.</p>
 <p>
   Fork me? Fork you, @octocat!
 </p>
