--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+	<h1>ADDED ANOTHER TITLE IN THE CORRECT BRANCH</h1>
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
