--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <p>
-  Ready to team up? Let's collaborate, @octocat!
+ Dere my hero Ready to team up? Let's collaborate yeharar sewotch, @octocat!
   
 </p>
 </body>
