Updated Index.html and Dayumed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <p>
   Fork me? Fork you, @octocat!
 </p>
-
+<p>
+  Idk what you think but pewdiepie has had the best career out of any other youtuber in the world.
+  He is like Thorfinn from Vinland saga, having a peaceful life after an increadible journey with youtube.
+</p>
 </body>
 </html>
