--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
+  <h1>
+    i love software engineering
+  </h1>
 
 <!-- Feel free to change this text here -->
 <p>
