--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
+  Changes made to this index file as per assignment requirements!
   Fork me? Fork you, @octocat!
 </p>
 
