--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Forked Repository</title>
 </head>
-
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+    <h1>Welcome to My Forked Repository!</h1>
+    <p>I am learning GitHub Forking and Pull Requests.</p>
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+    <a href="https://github.com/prorachist" target="_blank">
+        <button>Visit My GitHub</button>
+    </a>
+
+    <footer>
+        <p>Forked and modified by <strong>Your Name</strong></p>
+    </footer>
 
 </body>
 </html>
