--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<!-- hellooo, im nikita -->
 <p>
   Fork me? Fork you, @octocat!
 </p>
