--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- hello there -->
+<!--Feel free to add anything here-->
 <p>
   Fork me? Fork you, @octocat!
 </p>
