--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
+<p>Hello, I am learning GitHub Forking!</p>
 
 <!-- Feel free to change this text here -->
 <p>
