Updated index.html with my changes

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
-
 <!-- Feel free to change this text here -->
-<p>This is my change to the index.html file.</p>
+
 <p>
   Fork me? Fork you, @octocat!
+</p>
+<p>
+This is my change to the index.html file.
 </p>
 
 </body>
