Updated index.html with a new paragraph

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <p>Hello, this is my first contribution to a forked project!</p>
 
 <img src="forkit.gif" id="octocat" alt="" />
 
