--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 
 <body>
+<h1>welcome to the spoon-knife project!</h1>
 
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  this is demo project
 </p>
 
 </body>
