--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  welcome to Spoon-Knife Jo--
+  welcome to Spoon-Knife Joshika--
 </p>
 
 </body>
