added a line to index.html

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 
 <body>
+<p>This is a demo project I forked to practice GitHub contributions.</p>
 
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
-</p>
+  right now i am using notepad</p>
 
 </body>
 </html>
