--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  Fork this. Fork that.
+  How are you?
 </p>
 
 </body>
