--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
+<h1>Welcome to My Forked Repository!</h1> <!-- This change was made for the GitHub assignment -->
 
-<!-- Feel free to change this text here -->
+<p>This is a test change made as part of my GitHub assignment.</p> <!-- This change was made for the GitHub assignment -->
+
+
 <p>
   Fork me? Fork you, @octocat!
 </p>
