Updated index.html with a new paragraph

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+  <p>Hello, this is my first contribution to a forked project!</p>
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
