--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <title>Spoon-Knife Fork</title>
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<h1>Spoon-Knife Fork!</h1> 
+
 <p>
   Fork me? Fork you, @octocat!
 </p>
