--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
+  <style>
+    p {
+      background-color: green;
+      color: white;
+      font-size: 18px;
+    }
+  </style>
+  </head>
 
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+<div>Style me via the external method!</div>
+<p>I would like to be styled with the internal method please.</p>
+<button style="background-color: orange; font-size: 18px;">Inline Method</button>
 
 </body>
 </html>
