Updated index.html for GitHub fork assignment

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+This is a test change for the GitHub fork assiginment!
 </p>
 
-</body>
+Fork</body>
 </html>
