--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <link>nieuw titel</title>
 </head>
 
 <body>
+  <h>DIt iskoptekst</h>
 
 <img src="forkit.gif" id="octocat" alt="" />
 
