--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <h1> this is a test for pulling a request using fork </h1>
+<h2> this is a test fork using a branch and them pull a request </h2>
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
