--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Demo
 </p>
-<h1>harshith is a topper</h1>
+<h1>Demo</h1>
 
 </body>
 </html>
