--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+<p> sure , we can do that , i can change the text but anywhich ways itll be of 
+  NO USE !!!! TAKE CARE !!! BYE
+</p>
 <p>
   Fork me? Fork you, @octocat!
 </p>
 
 </body>
 </html>
+
