--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
+  
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -11,10 +12,12 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
+
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
 </p>
+<p>Leonardo Da Vinci came for a visit</p>
 
 </body>
 </html>
