--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  What's in a name? That which we call a Knife by any other name would still cut meat.
 </p>
 
 </body>
