changes made to index.html

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+ 
 <p>
-  Fork me? Fork you, @octocat!
+  Testing Fork and Pull request!
 </p>
 
+Changes made on Thursday the 25th of February, 2025.
 </body>
 </html>
