--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <link href="styles.css" rel="stylesheet" type="text/css">
+  <link rel="icon" type="image/x-icon" href="./github.ico">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @octocat! <a href="https://github.com/tonybnya" target="_blank">Tony</a> was here.
 </p>
 
 </body>
