new changes in index.html

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 </p>
 
 Changes made on Thursday the 25th of February, 2025.
+New changes made on Friday the 28th of February, 2025.
 </body>
 </html>
