--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
@@ -15,6 +14,6 @@
 <p>
   Fork me? Fork you, @octocat!
 </p>
-
 </body>
 </html>
+“Update index.html with new content”
