--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+<p>Fork me? Fork you, @octocat!</p>
+<p>hola aprendiendo a usar fork y pull redwes</p>
 
 </body>
 </html>
