--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
   Fork me? Fork you, @octocat!
 </p>
 
+<p>
+  Thank you,<a href="https://github.com/octocat">@octocat!</a> 
+</p>
+
 </body>
 </html>
