style: Change the styles and feel

--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
-
-<img src="forkit.gif" id="octocat" alt="" />
-
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
-
+  <header class="bg-primary text-white text-center py-3">
+    <h1>Welcome to Spoon-Knife</h1>
+  </header>
+  <main class="container text-center my-5">
+    <img src="https://octodex.github.com/images/Fintechtocat.png" id="octocat" alt="Fintechtocat" class="img-fluid">
+    <!-- Feel free to change this text here -->
+    <p class="mt-3">Fork me? Fork you, @octocat!</p>
+    <p>This is my contribution towards the open-source API which I hope will be accepted.</p>
+    <button class="btn btn-primary mt-3"><i class="fas fa-code-branch"></i> Fork on GitHub</button>
+  </main>
+  <footer class="bg-dark text-white text-center py-3">
+    <p>&copy; 2025 GitHub</p>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
