--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+ <div class="git">
+
+ </div>
 <p>
   Fork me? Fork you, @octocat!
 </p>
