Additional paragraph added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Feel free to change this text here -->
     <p>Fork me? Fork you, @octocat!</p>
 
-    <p>This is modified by Najib</p>
+    <p>This is modified by git community from 2025.</p>
+    <p>This is meant to be a simple diagonistic test.</p>
   </body>
 </html>
