Agregadas modificaciones en el archivo index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<!-- 
+
+Este es un archivo HTML básico con una imagen y un texto de prueba.
+  El título del documento es "Spoon-Knife".
+
+-->
 <p>
   Fork me? Fork you, @octocat!
 </p>
