--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </div>
 
 <p>
-  Ready to team up? Let's collaborate, @octocat!
+  Ready to team up? Let's collaborate, @octocat! !!
 </p>
 
 </body>
