Added real-time text reversal feature with input field and JavaScript

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+  <div class="container">
+    <h1>Type something and see it reversed</h1>
+    <input type="text" id="inputBox" placeholder="Type here...">
+    <h2 id="output"></h2>
+  </div>
 <p>
   Fork me? Fork you, @octocat!
 </p>
-
+  <script src="script.js"></script>
 </body>
 </html>
