feat: added tutorial for pull request

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+<h1 class="title">How to create a pull request on <br><span class="github">GitHub</span></h1>
+<iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/nCKdihvneS0?si=8ftI1DZHhW1arBOt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </body>
 </html>
