Updated index.html with a test change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<!-- Feel free to change this text here --> Hi, I'm new in this and I learning how to fork a repository. Thanks for reading.
+
 <p>
   Fork me? Fork you, @octocat!
 </p>
