--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  My Github username is codekid20
+  My Github username is codekid20 
+  My name is A
 </p>
 
 </body>
