changes, updating, indexfile

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @hibaali410
 </p>
+<h3>this is clone repo with PR first fork a repo then clone it create a new branch, change branch and then pull it</h3>
 
 </body>
 </html>
