Change the <p> in index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  It's been a long day without you, my friend
+  And I'll tell you all about it when I see you again.
+  Ouuuuuoooooooooooooooh
 </p>
 
 </body>
