--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  i want to learn how to control my robot
 </p>
 
 </body>
