--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </div>
 
 <p>
-  Ready to team up? Let's collaborate, @octocat!
+  Ready to team up 2? Let's collaborate, @octocat!
 </p>
 
 </body>
