--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
-</p>
-<p>
-  hello i am going to change you 
+  Fork me? Fork you, i will fork you now what you will do @octocat!
 </p>
 
 </body>
