--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
   <title>Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
+<div id="octocat">
+  <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
 
-<img src="forkit.gif" id="octocat" alt="" />
-
-<!-- Feel free to change this text here -->
+</div>
 <p>
-  Fork me? Fork you, @octocat!
+  Ready to team up? Let's collaborate, @octocat!
 </p>
-
 </body>
 </html>
