--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
-<p>
+<p>nom prénom ou n'importe quoi
   Fork me? Fork you, @octocat!
 </p>
 
