Change comment in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+<!--Change text of comment in index.hmtl (Bora Bahea!) -->
 <p>
   Fork me? Fork you, @octocat!
 </p>
