--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<div id="octocat">
+  <img src+"https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
+</div>
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+  <p>
+    ready to team up? let's collab
+  </p>
 
 </body>
 </html>
