--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
+<p>Ajout de ma première contribution</p>
+<p> 
+Fork me? Fork you, @octocat!
 </p>
 
 </body>
