Forcing new knowledge into old head.  Thanks!

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Thank you kindest Octocat for this Toot Oriole!
 </p>
 
 </body>
