--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Spoon-Knife</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
+    <img src="forkit.gif" id="octocat" alt="" />
 
-<img src="forkit.gif" id="octocat" alt="" />
+    <!-- Feel free to change this text here -->
+    <p>Fork me? Fork you, @octocat!</p>
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
-
-</body>
+    <h2>
+      No more rude language when we are cussing eachother out! You've got sugar
+      for brains!
+    </h2>
+  </body>
 </html>
