--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<div>
+  <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octcat Image">
+</div>
 
-<!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Ready to taem up? let's collaborate, @octocat!
 </p>
-
+  
+  
 </body>
 </html>
