feat: personalize HTML content with custom learning messages
Updated index.html to include custom text introducing the project, expressing excitement about GitHub, and acknowledging the forked nature of the repository. This personalization helps demonstrate understanding of the forking workflow.

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Spoon-Knife</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
+    <img src="forkit.gif" id="octocat" alt="" />
 
-<img src="forkit.gif" id="octocat" alt="" />
+    <h2>Hello, GitHub World! 🌍</h2>
+    <p>This is my first forked project!</p>
+    <p>I'm learning how to use GitHub and Git.</p>
+    <p>I'm excited to contribute to open source projects.</p>
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
-
-</body>
+    <p>Fork me? Fork you, @octocat!</p>
+  </body>
 </html>
