--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
-<p>
- Whatever happened to runcibles? 
-  <a href="https://www.anchenggy.com/blog/what-is-a-spork.html">runcibles</a>
-</p>
+<!-- Feel free to change this text here --> 
+<p>Whatever happened to <a href="https://www.anchenggy.com/blog/what-is-a-spork.html">runcibles</a>?</p> 
 
 </body>
 </html>
