--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here --> 
-<p>Whatever happened to <a href="https://www.anchenggy.com/blog/what-is-a-spork.html">runcibles</a>?</p> 
+<p>Whatever happened to <a href="https://www.anchenggy.com/blog/what-is-a-spork.html">runcibles</a>, @octocat?</p> 
 
 </body>
 </html>
