--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<!-- Esta es una edición de prueba -->
+
 <p>
   Fork me? Fork you, @octocat!
 </p>
