Edit the index.html file

--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
   Fork me? Fork you, @octocat!
 </p>
 
+<section style="background-color:#f2f2f2; padding:20px; border-radius:8px;">
+  <h2 style="color:#333;">Tentang Saya</h2>
+  <ul>
+    <li><strong>Nama:</strong> [Nama Mahasiswa]</li>
+    <li><strong>NIM:</strong> [NIM Mahasiswa]</li>
+    <li><strong>Fakultas:</strong> School of Computer Science</li>
+    <li><strong>Kesan Belajar Git:</strong> Git sangat membantu mengelola kode!</li>
+  </ul>
+</section>
+
+
 </body>
 </html>
