Modificar mensaje de demostracion en index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Este es mi primer cambio desde un fork. ¡Saludos desde Costa Rica! 🇨🇷
 </p>
 
 </body>
