A caterpillar has entered the repo.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
+<h1>The little caterpillar</h1>
+
+<p>
+Once upon a time, there was a little caterpillar, who really did not like
+octocat.
+</p>
+
 <p>
   Fork me? Fork you, @octocat!
 </p>
