--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  こんにちは！これはプルリクエストのテストです！
+  こんにちは！これはプルリクエストのテストです！！！<!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  </head>
+  <body>
+    
+  </body>
+  </html>
 </p>
 
 </body>
