Modified index Content

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<!-- forked by Siva-Anand-Zen -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork from @octocat!
 </p>
 
 </body>
