--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <meta charset="UTF-8" />
   <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+  <img src="forkit.gif" id="octocat" alt="Octocat with a fork" />
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+  <p>
+    Ready to fork this project? Join the fun, @octocat!
+  </p>
 
 </body>
 </html>
