--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <img src="forkit.gif" id="octocat" alt="" />
 
     <!-- Feel free to change this text here -->
-    <p>Fork me? Fork you, @Feras!</p>
+    <p>Fork me? Fork you, @Feras1!</p>
   </body>
 </html>
