Customized index.html for DevOps lab practical

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 
+<!-- Practical change done by Ayush Dubey for MCA DevOps task -->
+
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
+  <title>Fork and Practice</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
-<img src="forkit.gif" id="octocat" alt="" />
+<img src="forkit.gif" id="octocat" alt="Forking Octocat" />
 
-<!-- Feel free to change this text here -->
+<!-- This project is used for learning how to fork and make pull requests -->
 <p>
-  Fork me? Fork you, @octocat!
+  This is a practice project edited by Ayush Dubey for DevOps lab.
 </p>
 
 </body>
