--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<!DOCTYPE html>
+   <div id="octocat">
+     <img src="https://octodex.github.com/images/NUX_Octodex.gif" alt="Octocat Image">
+   </div>
+
+   <p>
+     Ready to team up? Let's collaborate, @octocat!
+   </p><!DOCTYPE html>
 
 <html>
 <head>
