--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
-<p>
+<p>Alteração feita para prática de fork e pull request.</p>
+
   Fork me? Fork you, @octocat!
 </p>
 
