--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
-</head>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Spoon-Knife</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
+  </head>
 
-<body>
+  <body>
+    <img src="bb.jpg" id="octocat" alt="" />
 
-<img src="bb.jpg" id="octocat" alt="" />
-
-<!-- Feel free to change this text here -->
-<div class="para">
-  <a href="http://www.savewalterwhite.com/" target="_blank">
-    I'M THE DANGER
-</a>
-</div>
-
-
-</body>
+    <!-- Feel free to change this text here -->
+    <div class="para">
+      <a href="http://www.savewalterwhite.com/" target="_blank">
+        Hello World
+      </a>
+    </div>
+  </body>
 </html>
