--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  Hello, Hola, Salve, Guten Tag, Bonjour, Konnichiwa, Namaste, Anyoung haseyo, Asalaam alaikum, God dag 
 </p>
 
 </body>
