--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat! Je suis johann le fooker
+  Fork me? Fork you, @octocat! 
+</p>
+<p>
+  Je suis Johann KOUAKOU un Forker de la communauté GitHub.
 </p>
 
 </body>
