j'ajoute un autre paragraphe

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
-<h2>Welcome my friend!</h2>
+<h1>
+  GitHub Pages
+</h1>
+<h2>
+  Welcome to my GitHub Pages site!
+</h2>
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat! 
