--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  dudeee i need to get it together and start grinding cuz  i wanna be rich so that i can have cats <br>
+  and not have to leave my cat alone!! <br>
+  i need to get my life together and stop being dpressed and start working on my projects <br>
 </p>
 
 </body>
