--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me once, shame on you, Fork me twice, shame on me, Fork me 151k times, I am this repo by @octocat
 </p>
 
 </body>
