--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
+  <!-- Este es un comentario agregado por David para la práctica de GitHub en Trailhead -->
+
 </p>
 
 </body>
