Added intro Paragraph to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 <p> I'm Me!, Practicing Git PRs!</p>
+<p> Hello, I'm Anitha, Here, I'm practicing Test Forking and Pull Requests </p>
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
