--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  <h1>Learning how to contribute to an OSS project</h1>
 </p>
 
 </body>
