Update index.html with new test message

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat! and spoon me too! Testing commit :D 
+  Fork me? Fork you, @octocat! and spoon me too! Testing commit :D
+  Now testing again with a new commit to see if it works. 
 </p>
 
 </body>
