testing for a third time

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <p>
   Fork me? Fork you, @octocat! and spoon me too! Testing commit :D
   Now testing again with a new commit to see if it works. 
+  Testing for a third time to see if the changes are reflected.
 </p>
 
 </body>
