--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @octocat! hello world! This is a test repository for the git.
+
 </p>
 
 </body>
