--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-
+<h1>Hey, it's me Kohlified Shekhar Bhatt</h1>
+<h2>Aspiring Computer Engineering Student</h2>
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
