--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @octocat! Contribute to this project by clicking the "Fork" button at the top right of this page.
+  <br>
+  <a href=" https://github.com/octocat/Spoon-Knife" target="_blank">  </a> 
 </p>
 
 </body>
