--- a/index.html
+++ b/index.html
@@ -1,20 +1,116 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
-  <LINK href="styles.css" rel="stylesheet" type="text/css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>University Feedback – Auth</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
+<body class="bg-gray-100 font-roboto min-h-screen grid grid-rows-[auto_1fr_auto]">
 
-<img src="forkit.gif" id="octocat" alt="" />
+  <!-- Header (row 1) -->
+  <header class="row-start-1 row-end-2 bg-white shadow p-4 items-center">
+    <h1 class="text-xl font-bold text-indigo-900">University Feedback System for college</h1>
+  </header>
 
-<!-- Feel free to change this text here -->
-<p>
-  Fork me? Fork you, @octocat!
-</p>
+  <main class="row-start-2 row-end-3 grid place-items-center gap-8 p-8">
+    <!-- Register -->
+    <section id="register" class="bg-white shadow rounded p-6 w-full md:w-1/2">
+      <h2 class="text-2xl font-semibold mb-4">Register</h2>
+      <form onsubmit="return validateRegister()" class="grid gap-4">
+        <div>
+          <label for="reg-name" class="block text-gray-700">Name</label>
+          <input type="text" id="reg-name" class="mt-1 block w-full border-gray-300 rounded p-2" required />
+        </div>
+        <div>
+          <label for="reg-email" class="block text-gray-700">Email</label>
+          <input type="email" id="reg-email" class="mt-1 block w-full border-gray-300 rounded p-2" required />
+        </div>
+        <div>
+          <label for="reg-email" class="block text-gray-700">Username</label>
+          <input type="text" id="reg-username" class="mt-1 block w-full border-gray-300 rounded p-2" required />
+        </div>
+        <div>
+          <label for="reg-password" class="block text-gray-700">Password</label>
+          <input type="password" id="reg-password" class="mt-1 block w-full border-gray-300 rounded p-2" required />
+        </div>
+
+        <div class="flex items-center space-x-2">
+          <input type="radio" id="reg-admin-request" name="adminRequest"
+            class="h-4 w-4 text-indigo-600 border-gray-300 rounded" />
+          <label for="reg-admin-request" class="text-gray-700">Request Admin Access</label>
+        </div>
+
+
+        <button type="submit" class="w-full px-4 py-2 bg-indigo-900 text-white rounded hover:bg-indigo-800">Create
+          Account</button>
+      </form>
+    </section>
+  </main>
+
+  <footer class="row-start-3 row-end-4 p-4 text-center text-sm text-gray-600">
+    &copy; 2025 University Name. <a href="#" class="hover:underline">Privacy Policy</a>
+  </footer>
+
+  <script>
+    function validateRegister() {
+      const nameE1 = document.getElementById('reg-name');
+      const emailE1 = document.getElementById('reg-email');
+      const userEl = document.getElementById('reg-username');
+      const pwdE1 = document.getElementById('reg-password');
+
+      const name = nameE1.value.trim();
+      const email = emailE1.value.trim();
+      const user = userEl.value.trim();
+      const pwd = pwdE1.value.trim();
+
+      const passwordPattern = /^(?=.{8,}$)(?=.*[A-Z])(?=.*[a-z])(?=.*\d)(?=.*[^A-Za-z0-9]).*$/;
+      const emailPattern = /^\S+@\S+\.\S+$/;
+
+
+      if (!name) {
+        alert('Please enter your name.');
+        nameEl.focus();
+        return false;
+      }
+      if (!user) {
+        alert('Please choose a username.');
+        userEl.focus();
+        return false;
+      }
+      if (!email) {
+        alert('Please enter your email.');
+        emailEl.focus();
+        return false;
+      }
+
+      if (!emailPattern.test(email)) {
+        alert('Please enter a valid email address.');
+        emailEl.focus();
+        return false;
+      }
+
+      if (!pwd) {
+        alert('Please enter your password.');
+        pwdEl.focus();
+        return false;
+      }
+
+      if (!passwordPattern.test(pwd)) {
+        alert('Please enter a valid password.');
+        emailEl.focus();
+        return false;
+      }
+
+      // All checks passed
+      return true;
+
+    }
+
+  </script>
 
 </body>
+
 </html>
