--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @octocat! 
+  hello,
+  welcome to git and github workshop;
 </p>
 
 </body>
