--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
-</p>
 
+
+</p>
+<footer style="background-color: #222; color: #fff; padding: 20px 0; text-align: center; margin-top: 40px;">
+  <p>
+    &copy; 2025 Spoon-Knife &middot; 
+    <a href="https://github.com/octocat/Spoon-Knife" style="color: #79b8ff; text-decoration: none;">GitHub Repository</a>
+    &middot; Made with <span style="color: #e25555;">&#9829;</span> by the Collaborator
+  </p>
+</footer>
 </body>
 </html>
