--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
+<p> My Name is hardik Lekhak . </p>
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @octocat! change by basu
 </p>
 
 </body>
