--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <img src="forkit.gif" id="octocat" alt="" />
+"welcome to git workshop!"
 
 <!-- Feel free to change this text here -->
 <p>
