--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!-- Feel free to change this text here -->
 <p>
   Fork me? Fork you, @octocat!
-  <h1>Contribute Rs 10</h1>
+  <h1>Contribute Educational things</h1>
 </p>
 
 </body>
