--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat! this code is contributed by KMC students...
+  Fork me? Fork you, @octocat! this code is contributed by KMC students@@@@@@...
 </p>
 
 </body>
