--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <!-- Feel free to change this text here -->
-<p>
+<p style="color: red;">
   Fork me? Fork you, @octocat! this code is contributed by KMC students@@@@@@...
-  please concern this false report..
+  please concern this false report.
 </p>
 
 </body>
