--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Mujh par ek eshaan karna ki mujh par koi eshaan mat karna.
 </p>
 
 </body>
