Added a personal touch in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <img src="forkit.gif" id="octocat" alt="" />
 
-<!-- Feel free to change this text here -->
+<p>This change was made by Shairul 😎</p>
+
 <p>
   Fork me? Fork you, @octocat!
 </p>
