made by mfeledyn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <p>
   Fork me? Fork you, @octocat!
 </p>
-This fixes key-auth headers
+
+mfeledyn: This fixes key-auth headers
 
 </body>
 </html>
