--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Feel free to change this text here -->
 <p>
-  Fork me? Fork you, @octocat!
+  Fork me? Fork you, @octocat! This change has been made by Odie Dog, who is a fan of octopuses and cats.
 </p>
 
 </body>
