--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <p>
   Fork me? Fork you, @octocat!
 </p>
+<!-- Cambios realizados por Eduardo Israel para práctica de pull request -->
 
 </body>
 </html>
